fix: increased dialog z-index

--- a/assets/stylesheets/generic/_widgets.less
+++ b/assets/stylesheets/generic/_widgets.less
@@ -42,7 +42,7 @@
   right: 0;
   top: 0;
   transition: background-color .2s ease-in-out;
-
+  z-index: 100;
   &.dialog-enter,
   &.dialog-leave.dialog-leave-active {
     background-color: fade(rgb(1, 1, 1), 0%);
